--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
-  <title>Programa Mês</title>
+  <title>Program Month</title>
 </head>
 <body>
-    <h3>Qual mês deseja saber?</h3>
+    <h3>Wich month do you want to know?</h3>
 
-   Digite um mês de 1 até 12:<input id="numero" type="number"> <br />
-   <button onclick="exibir()">Exibir mês</button>
+    Enter a month from 1 to 12:<input id="number" type=¨number¨</input>
+    <button onclick="display¨>Display Month</button>
 </body>
 </html>
