--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h3>Wich month do you want to know?</h3>
 
-    Enter a month from 1 to 12:<input id="number" type=¨number¨</input>
+    Enter a month from 1 to 12: <input id="num" type=¨number¨</input><br/ >
     <button onclick=¨display()¨>Show month</button>
 </body>
 </html>
