--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h3>Wich month do you want to know?</h3>
 
     Enter a month from 1 to 12: <input id="num" type=¨number¨</input><br/ >
-    <button onclick=¨display()¨>Show month</button>
+    <button onclick=display()>Show month</button>
 </body>
 </html>
